# Cinema_Algorithm

./: .gitignore  README.md  env.example  ignore.gitignore_global  package-lock.json  pyproject.toml  requirements.txt  to_do_list.ini
data/: top_ids.json
migrations/: env.py
migrations/versions/: 20250915_add_overview_to_film.py
scripts/: bootstrap.py  export_top_ids_from_db.py
src/api/: app.py  main.py
src/api/routes/: recommend.py
src/cinema_algorithm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: db.py  local_index.py  tmdb_client.py
src/etl/: get_movies.py  init_db.py  load_tmdb.py  schema.sql
src/ingest/: ingest_tmdb.py
src/ml/: features.py  recommender.py  recommender_service.py
src/services/: tmdb_simple_reco.py
src/web/: index.html
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  apiClient.js  main.jsx  styles.css
web/src/api/: client.js
web/src/components/: AutoMasonry.jsx  ErrorBoundary.jsx  MovieCard.jsx  tooltip.css
web/src/pages/: HomePage.jsx  MoviePage.jsx  NotFound.jsx  RecommendationsPage.jsx  SearchPage.jsx
