[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinema-algorithm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.2",
  "scikit-learn==1.5.1",
  "SQLAlchemy==2.0.32",
  "mysql-connector-python==9.0.0",
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "alembic==1.13.2",
]
